# python-flareio

./: .envrc  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.tools.txt
.github/: CODEOWNERS
.github/workflows/: publish.yml  tests.yml
flareio/: _ratelimit.py  api_client.py
src/flareio/: _models.py  api_client.py  auth.py  models.py  ratelimit.py
tests/: test_api_client.py  test_api_client_auth.py  test_api_client_creation.py  test_api_client_endpoints.py  test_api_client_scroll.py  test_api_client_scroll_events.py  test_ratelimit.py  utils.py
tools/: bump-version
