[project]
name = "flareio"
version = "2.0.1"
description = "Python SDK for the flare.io API."
authors = [
	{ name = "Alexandre Viau", email="alexandre.viau@flare.io>" }
]
readme = "README.md"
repository = "https://github.com/Flared/python-flareio"
license = "MIT"
requires-python = ">=3.8"
keywords = [
    "flare",
    "sdk",
]
classifiers = [
  "Intended Audience :: Information Technology",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
	"requests>=2",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
	"pytest>=8.3.2",
	"ruff>=0.15.0",
	"requests-mock>=1.12.1",
	"types-requests>=2.32.0.20240712",
	"pip>=25",
	"ty>=0.0.15",
]

[tool.ruff.lint]
extend-select = [
    "I",
    "ANN",
    "C411",
    "C413",
    "C414",
    "C416",
    "C417",
    "C419",
]


[tool.ruff.lint.isort]
force-single-line = true
no-sections = true
lines-after-imports = 2
lines-between-types = 1
force-wrap-aliases = true
combine-as-imports = true
forced-separate = [
    "typing",
    "flareio",
]
